# dspnr

./: .gitignore  README.md  pyproject.toml
src/dspnr/: prototype.py
tests/: test_dspnr.py
