[tool.poetry]
name = "dspnr"
version = "0.1.0"
description = ""
authors = ["agari <loots2438@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.740.0"
pylint = "^2.4"
autopep8 = "^1.4"
jupyterlab = "^1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
